added some citations

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2028,6 +2028,27 @@
   number = {1}
 }
 
+@article{esquivel-muelbertTreeModeDeath2020,
+  title = {Tree Mode of Death and Mortality Risk Factors across {{Amazon}} Forests},
+  author = {Esquivel-Muelbert, Adriane and Phillips, Oliver L. and Brienen, Roel J. W. and Fauset, Sophie and Sullivan, Martin J. P. and Baker, Timothy R. and Chao, Kuo-Jung and Feldpausch, Ted R. and Gloor, Emanuel and Higuchi, Niro and Houwing-Duistermaat, Jeanne and Lloyd, Jon and Liu, Haiyan and Malhi, Yadvinder and Marimon, Beatriz and Marimon Junior, Ben Hur and Monteagudo-Mendoza, Abel and Poorter, Lourens and Silveira, Marcos and Torre, Emilio Vilanova and Dávila, Esteban Alvarez and del Aguila Pasquel, Jhon and Almeida, Everton and Loayza, Patricia Alvarez and Andrade, Ana and Aragão, Luiz E. O. C. and Araujo-Murakami, Alejandro and Arets, Eric and Arroyo, Luzmila and C, Gerardo A. Aymard and Baisie, Michel and Baraloto, Christopher and Camargo, Plínio Barbosa and Barroso, Jorcely and Blanc, Lilian and Bonal, Damien and Bongers, Frans and Boot, René and Brown, Foster and Burban, Benoit and Camargo, José Luís and Castro, Wendeson and Moscoso, Victor Chama and Chave, Jerome and Comiskey, James and Valverde, Fernando Cornejo and da Costa, Antonio Lola and Cardozo, Nallaret Davila and Di Fiore, Anthony and Dourdain, Aurélie and Erwin, Terry and Llampazo, Gerardo Flores and Vieira, Ima Célia Guimarães and Herrera, Rafael and Honorio Coronado, Eurídice and Huamantupa-Chuquimaco, Isau and Jimenez-Rojas, Eliana and Killeen, Timothy and Laurance, Susan and Laurance, William and Levesley, Aurora and Lewis, Simon L. and Ladvocat, Karina Liana Lisboa Melgaço and Lopez-Gonzalez, Gabriela and Lovejoy, Thomas and Meir, Patrick and Mendoza, Casimiro and Morandi, Paulo and Neill, David and Nogueira Lima, Adriano José and Vargas, Percy Nuñez and de Oliveira, Edmar Almeida and Camacho, Nadir Pallqui and Pardo, Guido and Peacock, Julie and Peña-Claros, Marielos and Peñuela-Mora, Maria Cristina and Pickavance, Georgia and Pipoly, John and Pitman, Nigel and Prieto, Adriana and Pugh, Thomas A. M. and Quesada, Carlos and Ramirez-Angulo, Hirma and de Almeida Reis, Simone Matias and Rejou-Machain, Maxime and Correa, Zorayda Restrepo and Bayona, Lily Rodriguez and Rudas, Agustín and Salomão, Rafael and Serrano, Julio and Espejo, Javier Silva and Silva, Natalino and Singh, James and Stahl, Clement and Stropp, Juliana and Swamy, Varun and Talbot, Joey and ter Steege, Hans and Terborgh, John and Thomas, Raquel and Toledo, Marisol and Torres-Lezama, Armando and Gamarra, Luis Valenzuela and van der Heijden, Geertje and van der Meer, Peter and van der Hout, Peter and Martinez, Rodolfo Vasquez and Vieira, Simone Aparecida and Cayo, Jeanneth Villalobos and Vos, Vincent and Zagt, Roderick and Zuidema, Pieter and Galbraith, David},
+  date = {2020-11-09},
+  journaltitle = {Nat Commun},
+  volume = {11},
+  pages = {5515},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-020-18996-3},
+  url = {http://www.nature.com/articles/s41467-020-18996-3},
+  urldate = {2021-07-14},
+  abstract = {The~carbon sink capacity of tropical forests~is substantially affected by tree mortality. However, the main drivers of tropical~tree death remain largely unknown. Here we present a pan-Amazonian assessment of how and why trees die, analysing over 120,000 trees representing\,{$>$}\,3800 species from 189 long-term~RAINFOR forest plots. While tree mortality rates vary greatly Amazon-wide, on average trees are as likely to die standing as they are broken or uprooted—modes of death with different ecological consequences. Species-level growth rate is the single~most important predictor of tree death in Amazonia, with faster-growing species being at~higher risk. Within species, however, the slowest-growing trees are at greatest risk while the effect of tree size varies across the basin. In the driest Amazonian region~species-level bioclimatic distributional patterns also predict the risk of death, suggesting that these forests are experiencing climatic conditions beyond their adaptative limits. These results provide not only a~holistic pan-Amazonian picture of tree death but large-scale~evidence for the overarching importance of the growth–survival trade-off in driving tropical~tree mortality.},
+  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Forest ecology;Tropical ecology Subject\_term\_id: forest-ecology;tropical-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZNUBUMGY\\Esquivel-Muelbert et al. - 2020 - Tree mode of death and mortality risk factors acro.pdf;C\:\\Users\\Me\\Zotero\\storage\\XDLPKYEG\\s41467-020-18996-3.html},
+  issue = {1},
+  langid = {english},
+  number = {1},
+  options = {useprefix=true}
+}
+
 @online{ESSDBerkeleyEarth,
   title = {{{ESSD}} - {{The Berkeley Earth Land}}/{{Ocean Temperature Record}}},
   url = {https://essd.copernicus.org/articles/12/3469/2020/},
@@ -2461,6 +2482,26 @@
   url = {https://www.pnas.org/content/117/24/13580},
   urldate = {2020-07-17},
   file = {C\:\\Users\\Me\\Zotero\\storage\\PL22JTI4\\13580.html}
+}
+
+@article{goraImplicationsSizedependentTree2021,
+  title = {Implications of Size-Dependent Tree Mortality for Tropical Forest Carbon Dynamics},
+  author = {Gora, Evan M. and Esquivel-Muelbert, Adriane},
+  date = {2021-04},
+  journaltitle = {Nat. Plants},
+  volume = {7},
+  pages = {384--391},
+  publisher = {{Nature Publishing Group}},
+  issn = {2055-0278},
+  doi = {10.1038/s41477-021-00879-0},
+  url = {https://www.nature.com/articles/s41477-021-00879-0},
+  urldate = {2021-07-14},
+  abstract = {Tropical forests are mitigating the ongoing climate crisis by absorbing more atmospheric carbon than they emit. However, widespread increases in tree mortality rates are decreasing the ability of tropical forests to assimilate and store carbon. A relatively small number of large trees dominate the contributions of these forests to the global carbon budget, yet we know remarkably little about how these large trees die. Here, we propose a cohesive and empirically informed framework for understanding and investigating size-dependent drivers of tree mortality. This theory-based framework enables us to posit that abiotic drivers of tree mortality—particularly drought, wind and lightning—regulate tropical forest carbon cycling via their disproportionate effects on large trees. As global change is predicted to increase the pressure from abiotic drivers, the associated deaths of large trees could rapidly and lastingly reduce tropical forest biomass stocks. Focused investigations of large tree death are needed to understand how shifting drivers of mortality are restructuring carbon cycling in tropical forests.},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Reviews Subject\_term: Climate-change ecology;Ecosystem ecology;Forest ecology;Forestry;Tropical ecology Subject\_term\_id: climate-change-ecology;ecosystem-ecology;forest-ecology;forestry;tropical-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EDHFWFFA\\Gora and Esquivel-Muelbert - 2021 - Implications of size-dependent tree mortality for .pdf;C\:\\Users\\Me\\Zotero\\storage\\KS5ADPCH\\s41477-021-00879-0.html},
+  issue = {4},
+  langid = {english},
+  number = {4}
 }
 
 @article{gouldenCaliforniaForestDieoff2019,
@@ -3108,13 +3149,6 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LRDG8FTC\\Ichie et al. - 2016 - Ecological distribution of leaf stomata and tricho.pdf},
   langid = {english},
   number = {4}
-}
-
-@online{IncreasingRespiratoryCosts,
-  title = {Do Increasing Respiratory Costs Explain the Decline with Age of Forest Growth Rate? | {{SpringerLink}}},
-  url = {https://link.springer.com/article/10.1007/s11676-019-01020-w},
-  urldate = {2021-06-09},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\WAMN9CLW\\Do increasing respiratory costs explain the declin.pdf}
 }
 
 @online{InteractionsWaterStress,
@@ -8368,6 +8402,26 @@
   number = {1}
 }
 
+@article{stovallTreeHeightExplains2019b,
+  title = {Tree Height Explains Mortality Risk during an Intense Drought},
+  author = {Stovall, Atticus E. L. and Shugart, Herman and Yang, Xi},
+  date = {2019-09-26},
+  journaltitle = {Nat Commun},
+  volume = {10},
+  pages = {4385},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-019-12380-6},
+  url = {http://www.nature.com/articles/s41467-019-12380-6},
+  urldate = {2021-07-14},
+  abstract = {Forest mortality is accelerating due to climate change and the largest trees may be at the greatest risk, threatening critical ecological, economic, and social benefits. Here, we combine high-resolution airborne LiDAR and optical data to track tree-level mortality rates for \textasciitilde 2 million trees in California over 8 years, showing that tree height is the strongest predictor of mortality during extreme drought. Large trees die at twice the rate of small trees and environmental gradients of temperature, water, and competition control the intensity of the height-mortality relationship. These findings suggest that future persistent drought may cause widespread mortality of the largest trees on Earth.},
+  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Climate-change ecology;Ecophysiology;Forest ecology Subject\_term\_id: climate-change-ecology;ecophysiology;forest-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\TYGAHRJB\\Stovall et al. - 2019 - Tree height explains mortality risk during an inte.pdf;C\:\\Users\\Me\\Zotero\\storage\\E6S9UBTW\\s41467-019-12380-6.html},
+  issue = {1},
+  langid = {english},
+  number = {1}
+}
+
 @article{suggittExtinctionRiskClimate2018,
   title = {Extinction Risk from Climate Change Is Reduced by Microclimatic Buffering},
   author = {Suggitt, Andrew and Wilson, Robert and Isaac, Nick and Beale, Colin and Auffret, Alistair and August, Tom and Bennie, Jonathan and Crick, Humphrey and Duffield, Simon and Fox, Richard and Hopkins, John and Macgregor, Nicholas and Morecroft, Mike and Walker, Kevin and Maclean, Ilya},
@@ -9160,6 +9214,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\XFFHHB4I\\Weerasinghe et al. - 2014 - Canopy position affects the relationships between .pdf;C\:\\Users\\Me\\Zotero\\storage\\N9PSHQ7K\\2337967.html},
   langid = {english},
   number = {6}
+}
+
+@article{westIncreasingRespiratoryCosts2020,
+  title = {Do Increasing Respiratory Costs Explain the Decline with Age of Forest Growth Rate?},
+  author = {West, P. W.},
+  date = {2020-06},
+  journaltitle = {J. For. Res.},
+  volume = {31},
+  pages = {693--712},
+  issn = {1007-662X, 1993-0607},
+  doi = {10.1007/s11676-019-01020-w},
+  url = {http://link.springer.com/10.1007/s11676-019-01020-w},
+  urldate = {2021-07-14},
+  abstract = {Abstract             Once forests have achieved a full canopy, their growth rate declines progressively with age. This work used a global data set with estimates from a wide range of forest types, aged 20‒795~years, of their annual photosynthetic production (gross primary production, GPP) and subsequent above- plus below-ground biomass production (net primary production, NPP). Both GPP and NPP increased with increasing mean annual temperature and precipitation. GPP was then unrelated to forest age whilst NPP declined progressively with increasing age. These results implied that autotrophic respiration increases with age. It has been proposed that GPP should decline in response to increasing water stress in leaves as water is raised to greater heights as trees grow taller with age. However, trees may make substantial plastic adjustment in morphology and anatomy of newly developing leaves, xylem and fine roots to compensate for this stress and maintain GPP with age. This work reviews the possibilities that NPP declines with age as respiratory costs increase progressively in, any or all of, the construction and maintenance of more complex tissues, the maintenance of increasing amounts of live tissue within the sapwood of stems and coarse roots, the conversion of sapwood to heartwood, the increasing distance of phloem transport, increased turnover rates of fine roots, cost of supporting very tall trees that are unable to compensate fully for increased water stress in their canopies or maintaining alive competitively unsuccessful small trees.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\R4CJNBNE\\West - 2020 - Do increasing respiratory costs explain the declin.pdf},
+  langid = {english},
+  number = {3}
 }
 
 @article{westreenenSubstantialDifferencesOccur2020,
