--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -343,9 +343,10 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 
-Leaf thermal tolerances are more closely adapted to microenvironment through leaf traits than macroclimate and phylogeny [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions showed higher $T_{50}$ measured by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. At vertal gradient within canopy, *Acacia papyrocarpa* (Benth.) showed greater $T_{50}$ and higher composite climate stress in the lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. Further, at a leaf trait level, $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time, whereas $T_{50}$ was greater among species' leaves with greater LMA, compared to species with low LMA [@slotLeafHeatTolerance2020]. Additionally, @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that experienced higher maximum temperatures had higher photosynthetic heat tolerance. However, even with sun and shade leaf differences within canopy (Table 1)$T_{50}$ modestly varies, being slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019a]. Based on these evidences, we would expect, leaves exposed to greater heat stress in exposed canopies to have higher heat tolerance but further research is required to fully understand relationship between heat tolerance, light exposure and microclimates.
-
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
+
+Leaf thermal tolerances are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. Along a vertical gradient within canopy, *Acacia papyrocarpa* (Benth.) showed greater $T_{50}$ and higher composite climate stress in the lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. Additionally, thermal tolerances are explained more by leaf traits than phylogeny [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time, whereas $T_{50}$ was greater among species with greater LMA [@slotLeafHeatTolerance2020]. Across species sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020]. However, considering sun and shade leaf differences within canopy (Table 1) $T_{50}$ varies modestly, being slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019a]. Based on this evidence, we would expect leaves exposed to greater heat stress within canopy to have higher heat tolerance, but further research is required to fully understand relationship between heat tolerance, light exposure and microclimates.
+
 
 ### Respiration
 
